docs/spec/grammar/conformance/reject/07-empty.myc
// rejected: an empty program (no nodule header) is not well-formed
